# srtla-send-rs

./: AGENTS.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-bindings.yml  release.yml
benches/: alloc.rs
bindings/typescript/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json
bindings/typescript/src/: index.test.ts  index.ts
bindings/typescript/src/control/: index.ts
bindings/typescript/src/sender/: index.test.ts  index.ts
bindings/typescript/src/telemetry/: index.test.ts  watch.test.ts
bindings/typescript/tests/: control-client.test.ts  telemetry-reader.test.ts
bindings/typescript/tests/fixtures/: telemetry-golden.json
ci/: build-deb.sh  verify-bindings-release-ref.sh
crates/network-sim/src/: harness.rs
docs/: KEEPALIVE_INTEROP.md
docs/adr/: ADR-001-control-protocol.md
docs/notes/: mimalloc-decision.md  sendmmsg-deferred.md  strata-port-evaluation.md
scripts/: bindings_package_manager_contract_test.sh  bindings_release_ref_contract_test.sh  check-doc-refs.sh  deb_version_ordering_test.sh  netns_test_gate.sh  release_version_contract_test.sh  release_workflow_contract_test.py  rust_cache_contract_test.py  workflow_authority_contract_test.py  workflow_contract.py  workflow_yaml.py
src/: config.rs  ewma.rs  jsonrpc.rs  kalman.rs  lib.rs  main.rs  stats.rs  subscription.rs  telemetry_file.rs  test_helpers.rs
src/connection/: ack_nak.rs  batch_recv.rs  batch_send.rs  bitrate.rs  mod.rs  packet_io.rs  rtt.rs  socket.rs
src/connection/congestion/: enhanced.rs
src/registration/: mod.rs  probing.rs
src/sender/: housekeeping.rs  mod.rs  packet_handler.rs
src/sender/selection/: blest.rs  edpf.rs  iods.rs  mod.rs  rtt_threshold.rs
src/tests/: config_tests.rs  connection_tests.rs  earned_ack_tests.rs  edpf_tests.rs  jsonrpc_control_tests.rs  keepalive_interop_tests.rs  mod.rs  rtt_threshold_tests.rs  sender_tests.rs  stall_deselect_tests.rs  subscription_tests.rs
tests/: docs_mention_edpf.rs  netns_basic.rs  netns_edpf.rs  netns_failure.rs  netns_impairment.rs  netns_pr19_parity.rs  netns_scenario.rs  parser_proptest.rs  srtla_wire_conformance.rs  subscription_loom.rs
tests/common/: mod.rs
